force-app/main/default/objects/Account/fields/Tracey_Bot_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Tracey_Bot_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tracey Bot Enabled</label>
    <type>Checkbox</type>
</CustomField>