force-app/main/default/objects/Account/fields/Tracey_Bot_Last_Temp_Date__c.field-meta.xml
<CustomField>
    <fullName>Tracey_Bot_Last_Temp_Date__c</fullName>
    <label>Tracey Bot - Last Known Temp Date</label>
    <type>DateTime</type>
</CustomField>