force-app/main/default/objects/Account/fields/Tracey_Bot_Virtual_Temp_StartDate__c.field-meta.xml
<CustomField>
    <fullName>Tracey_Bot_Virtual_Temp_StartDate__c</fullName>
    <label>Tracey Bot - Virtual Temp StartDate</label>
    <type>DateTime</type>
</CustomField>